<resources>
    <string name="app_name">American Football Scores App</string>
    <string name="sample_point">0</string>
    <string name="sample_add_6_points">+6 Points</string>
    <string name="sample_add_3_points">+3 Points</string>
    <string name="sample_add_2_points">+2 Points</string>
    <string name="sample_add_1_point">+1 Point</string>
    <string name="sample_teamb_description">TeamB</string>
    <string name="sample_teama_description">TeamA</string>
    <string name="reset_button">Reset</string>
</resources>
