<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <!-- android:fillViewport="true" -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/view_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <ImageView
                    android:id="@+id/photo_image_view"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center"
                    android:padding="16dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/atlanta_falcons"
                    android:contentDescription="@string/sample_teama_description" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-light"
                    android:paddingBottom="24dp"
                    android:text="@string/sample_point"
                    android:textColor="#000000"
                    android:textSize="56sp" />

                <Button
                    android:id="@+id/team_a_six"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="teamAPlus6"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="addSixForTeamA"
                    android:text="@string/sample_add_6_points" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="teamAPlus3"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="addThreeForTeamA"
                    android:text="@string/sample_add_3_points" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="teamAPlus2"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="addTwoForTeamA"
                    android:text="@string/sample_add_2_points" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="teamAPlus1"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="addOneForTeamA"
                    android:text="@string/sample_add_1_point" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <ImageView
                    android:id="@+id/photo2_image_view"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center"
                    android:padding="16dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/carolina_panthers"
                    android:contentDescription="@string/sample_teamb_description" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-light"
                    android:paddingBottom="24dp"
                    android:text="@string/sample_point"
                    android:textColor="#000000"
                    android:textSize="56sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="teamBPlus6"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="addSixForTeamB"
                    android:text="@string/sample_add_6_points" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="teamBPlus3"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="addThreeForTeamB"
                    android:text="@string/sample_add_3_points" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="teamBPlus2"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="addTwoForTeamB"
                    android:text="@string/sample_add_2_points" />

                <Button
                    android:id="@+id/valami"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="teamBPlus1"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="addOneForTeamB"
                    android:text="@string/sample_add_1_point" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="36dp"
            android:onClick="resetScore"
            android:text="@string/reset_button" />

    </LinearLayout>
</ScrollView>